# core

./: .gitignore  .gitmodules  .zshrc  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: test.yml
game/: main.rs
game/troops/: interface.rs  mod.rs  troops.rs  warrior.rs  worker.rs
game/utils/: world_helper.rs
src/: README.md  main.c
src/core/: game.rs  mod.rs  socket_client.rs  socket_connection.rs  socket_server.rs  tests.rs
src/core/game/: bridge.rs  bridge_con.rs  config.rs  game.rs  generate.rs  login.rs  main.rs  message.rs  mod.rs  passive_income.rs  position.rs  spectator.rs  state.rs  team.rs  unit.rs  utils.rs
src/core/game/action/: action.rs  attack.rs  create.rs  mod.rs  request.rs  travel.rs
src/core/game/entity/: core.rs  entity.rs  entity_traits.rs  mod.rs  resource.rs  unit.rs
src/core/game/helper/: damage.rs  dmg.rs  mod.rs  target.rs
src/core/game/log/: log.rs  log_options.rs  mod.rs
src/game/: main.rs
src/tests/: mod.rs
src/visualizer/: data.json  main.rs  test.rs
visualizer/: main.rs
