[package]
name = "etst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
uuid = "1.6.1"

[[bin]]
name = "game"
path = "src/game/main.rs"

[[bin]]
name = "visualizer"
path = "src/visualizer/main.rs"

[lib]
name = "lib"
path = "src/core/mod.rs"

[[test]]
name = "game_tests"
path = "src/tests/mod.rs"